--- a/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
@@ -132,7 +132,7 @@ ROUTER_FRAME_TIMEOUT=300
 ROUTER_XOR_FILTER_WORKER=true
 ```
 
-The key point is `ROUTER_CONSOLE_SECRET` from this file, matches
+The key point is that `ROUTER_CONSOLE_SECRET` from this file matches
 `ROUTER_SECRETS` from `.env`. You can ignore these other fields for now, but we
 can revisit them later.
 
