--- a/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
@@ -183,7 +183,7 @@ $ docker exec helium_router _build/default/rel/router/bin/router peer addr
 ```
 
 The string after the second slash,
-`11xHXS5AgLyjYRCJ4ctcWcsMRULS8jro9Pb1GPaTG1neGk1dNcf` is the libp2p address and
+`11xHXS5AgLyjYRCJ4ctcWcsMRULS8jro9Pb1GPaTG1neGk1dNcf`, is the libp2p address and
 this is what you need to update your OUI with, using the wallet you bought the
 OUI with.
 
