Run a Network Server (#186)
* oui purchase

* small edits

* small edits

* edits

* Console start-up guide

* simplify console running

* victor review

* refer to slabs as DevAddr slabs

* refer to DevAddr Slabs instead of NwkAddr

* Frenchman review

* address Dal review

* Update docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx

Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

* Update docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx

Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

* Update docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx

Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

* Update docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx

Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

* Update docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx

Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

* Update docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx

Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

* Update docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx

Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

* Update docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx

Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

* Mikael Falkvidd review

* Update docs/use-the-network/run-a-network-server/run-console/run-console.mdx

* Update docs/use-the-network/run-a-network-server/run-console/run-console.mdx

* Update docs/use-the-network/run-a-network-server/run-console/run-console.mdx

Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

--- a/docs/lorawan-on-helium/lorawan-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-on-helium.mdx
@@ -23,6 +23,10 @@ LoRaWAN Network. Achieving this distinguishes Helium’s LoRaWAN Network from an
 other: public wireless infrastructure is now compatible with privately-run
 network servers.
 
+The rest of this article will discuss the networking primitives. If you want to
+go ahead and run a network server, please checkout our article about [running
+a network server](/use-the-network/run-a-network-server).
+
 ## The OUI
 
 Each LoRaWAN Network Server (LNS) on the Helium Network acquires an
@@ -32,8 +36,12 @@ by the OUI operator:
 
 - up to five **filters**, describing the sets (AppEUI, DevEUI) expected by the
   LNS
-- one or more **slabs** of NwkAddrs, reserving an address space for the OUI's
+- one or more **slabs** of DevAddrs, reserving NwkAddr space for the OUI's
   devices on the Helium Network
+
+A device defined by (AppEui, DevEui) can be allocated any of the DevAddrs owned
+by the OUI. It is even possible to multiplex many devices on the same DevAddr
+at the same time, using the Message Integrity Check (MIC) to disambiguate.
 
 ### Join Request Frames and Filters
 
@@ -57,9 +65,9 @@ gateway run it through the table and to see if it's there.
 
 In response to the Join Request, a Join Accept is sent down, assigning the
 NwkAddr. Due to the multi-tenancy on the Helium Network, the LNS may only assign
-NwkAddrs within its slab(s).
+NwkAddrs within its DevAddr slab(s).
 
-### Data Frames and NwkAddr Slabs
+### Data Frames and DevAddr Slabs
 
 Data packets have the followed unencrypted header (FHDR):
 
@@ -71,11 +79,11 @@ Data packets have the followed unencrypted header (FHDR):
 +----------------------------------------------------------------------+
 ```
 
-Within NwkAddr, there is the NwkAddr of a device:
+Within DevAddr, there is the NwkAddr of a device:
 
 ```bash
 +------------------------------------------------+
-|                     NwkAddr                    |
+|                     DevAddr                    |
 +------------------------+-----------------------+
 |   NwkID (bits 31–25)   |  NwkAddr (bits 24–0)  |
 +-----------+--------------------+---------------+
@@ -85,8 +93,8 @@ Within NwkAddr, there is the NwkAddr of a device:
 ```
 
 
-From the gateways perspective, it is able to use NwkAddr to determine the OUI of
-Data frames. A quick query can say which OUI owns this NwkAddr slab. This look-up and routing by NwkAddr instead of by \(AppEUI, DevEUI\) via _xorhash_
+From the gateways perspective, it is able to use DevAddr to determine the OUI of
+Data frames. A quick query can say which OUI owns this DevAddr slab. This look-up and routing by DevAddr instead of by \(AppEUI, DevEUI\) via _xorhash_
 filters is generally much quicker.
 
 
