--- a/docs/mine-hnt/validators/monitor.mdx
+++ b/docs/mine-hnt/validators/monitor.mdx
@@ -40,7 +40,7 @@ Docker: ```docker exec validator miner info height```
 
 If you’re syncing something similar to the following should appear:
 ```
-~$ validator miner info height
+~$ docker exec validator miner info height
 14        449
 ```
 
