--- a/docs/mine-hnt/validators/validator-deployment-guide.mdx
+++ b/docs/mine-hnt/validators/validator-deployment-guide.mdx
@@ -25,12 +25,18 @@ This guide will cover the end-to-end process of deploying a Helium Validator. It
 To successfully deploy a Helium Validator, you'll need to do the following:
 
 * Install the [Helium CLI Wallet](https://github.com/helium/helium-wallet-rs)
-* Deploy a node on a cloud service like AWS, GCP, Azure, or Digital Ocean. Or deploy a physical server on which to run the validator. [The technical node requirements can be found here](/mine-hnt/validators/requirements/). 
+* Deploy a virtual server on a cloud service like AWS, GCP, Azure, or Digital Ocean. Or deploy a physical server on which to run the validator. [The technical node requirements can be found here](/mine-hnt/validators/requirements/). 
 
 
 ## Create Testnet Wallet 
 
 Once you have your [Helium CLI Wallet](https://github.com/helium/helium-wallet-rs) installed locally, it's time to create your Testnet Wallet. Run the following command to create it. (This command format assumes you're using the executable. If you've built the wallet from source it'll look slightly different.)
+
+:::warning
+
+It is best practice to not create your Helium CLI wallet on the same machine you're using for your Validator. We advise you do not do this.
+
+:::
 
 
 ```
@@ -184,7 +190,7 @@ docker run -d \
 --publish 2154:2154/tcp \
 --name validator \
 --mount type=bind,source=$HOME/validator_data,target=/var/data \
-quay.io/team-helium/validator:miner-val-amd64_val0.1.7
+quay.io/team-helium/validator:latest-val-amd64
 ```
 
 * `-d` option runs in detached mode, which makes the command return or not; you may want to omit if you have a daemon manager running the docker for you.
