--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -30,6 +30,14 @@ At any time use ```-h``` or ```--help``` to get more help for a command.
 
 ```./helium-wallet create basic --network testnet``` 
 
+#### Create a Wallet in a non-interactive / DevOps way
+
+```
+export HELIUM_WALLET_PASSWORD="My Password"
+./helium-wallet create basic --network testnet
+``` 
+
+
 ### View wallet balance and public key
 ```./helium-wallet info``` view public key and TNT balance. You’ll need this public key address to obtain TNT needed for staking. 
 
