Update the Bobcat miner site.
Bobcat's site wasn't up at last editing.

--- a/docs/mine-hnt/hotspot-makers/approved-makers/approved-makers.mdx
+++ b/docs/mine-hnt/hotspot-makers/approved-makers/approved-makers.mdx
@@ -18,5 +18,5 @@ Since the introduction of [HIP19](https://github.com/helium/HIP/blob/master/0019
 | [Nebra Ltd](https://www.nebra.com/)      	| [Nebra](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/nebra-ltd.md) | 2020-12-10 |[13Zni1he7KY9pUmkXMhEhTwfUpL9AcEV1m2UbbvFsrU9QPTMgE3](https://explorer.helium.com/accounts/13Zni1he7KY9pUmkXMhEhTwfUpL9AcEV1m2UbbvFsrU9QPTMgE3)|  
 | [SyncroB.it](https://syncrob.it/)      	| [SyncroB.it](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/syncrobit.md) | 2020-12-14 |[14rb2UcfS9U89QmKswpZpjRCUVCVu1haSyqyGY486EvsYtvdJmR](https://explorer.helium.com/accounts/14rb2UcfS9U89QmKswpZpjRCUVCVu1haSyqyGY486EvsYtvdJmR)|
 | [RAK Wireless/CalChip](https://www.calchipconnect.com/) | [RAK/CalChip](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/rak-wireless.md) | 2020-12-29 |[13ENbEQPAvytjLnqavnbSAzurhGoCSNkGECMx7eHHDAfEaDirdY](https://explorer.helium.com/accounts/13ENbEQPAvytjLnqavnbSAzurhGoCSNkGECMx7eHHDAfEaDirdY)|  
-| [EasyLinkin/Bobcat](http://www.easylinkin.net/)   | [EasyLinkin](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/easylinkin.md) | 2021-01-12 |[14sKWeeYWQWrBSnLGq79uRQqZyw3Ldi7oBdxbF6a54QboTNBXDL](https://explorer.helium.com/accounts/14sKWeeYWQWrBSnLGq79uRQqZyw3Ldi7oBdxbF6a54QboTNBXDL)|
+| [EasyLinkin/Bobcat](https://www.bobcatminer.com)   | [EasyLinkin](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/easylinkin.md) | 2021-01-12 |[14sKWeeYWQWrBSnLGq79uRQqZyw3Ldi7oBdxbF6a54QboTNBXDL](https://explorer.helium.com/accounts/14sKWeeYWQWrBSnLGq79uRQqZyw3Ldi7oBdxbF6a54QboTNBXDL)|
 | [Kerlink](https://www.kerlink.com)   | [Kerlink](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/kerlink.md) | 2021-01-24 |[Not Yet Created]|
