Fix OUI docs (#219)
* give command for manually updating xor filter

* apply prettier

--- a/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
@@ -178,7 +178,7 @@ blockchain does not know that the address of Router is associated with the OUI.
 Let's get the address of the OUI
 
 ```
-$ docker exec helium_router _build/default/rel/router/bin/router peer addr
+$ docker exec helium_router router peer addr
 /p2p/11xHXS5AgLyjYRCJ4ctcWcsMRULS8jro9Pb1GPaTG1neGk1dNcf
 ```
 
@@ -201,8 +201,21 @@ appropriately. eg:
 
 ### Test a Device
 
-Login to your local Console instnace (localhost:4000) and create an organization
+Login to your local Console instance (localhost:4000) and create an organization
 and a device. If you ever need help with Console as a user,
-[much documentation exists here](/use-the-network/console). If you see a
-successful Join Request, then you are successfully running your private LoRaWAN
-Network Server. Congratulations!
+[much documentation exists here](/use-the-network/console).
+
+Once you've created the device on console, go to a terminal window on server
+running Console and execute the following command to tell Router to update the
+`xor filter` on the blockchain:
+
+```
+docker exec helium_router router device xor --commit
+```
+
+Give the transaction some time to process (you can track it on explorer). Once
+it has been processed, you can try joining the device. If you see a successful
+Join Request, then you are successfully running your private LoRaWAN Network
+Server.
+
+Congratulations!
