pulling a few more things out

--- a/docs/mine-hnt/validators/validator-deployment-guide.mdx
+++ b/docs/mine-hnt/validators/validator-deployment-guide.mdx
@@ -254,22 +254,10 @@ Before we get started, make sure you're fully up to date:
 sudo apt-get update -y
 ```
 
-Next, let's install all the things. Start by cloning the `validator` branch of `miner`:
+Next, clone the `validator` branch of `miner`:
 
 ```
 git clone -b pevm/validators https://github.com/helium/miner.git
-```
-
-Then proceed to get you some Erlang (here we're specifying `22.3.1`):
-
-```
-wget https://packages.erlang-solutions.com/erlang/debian/pool/esl-erlang_22.3.1-1~ubuntu~bionic_amd64.deb
-```
-
-Next, get the `libwxgtk` package:
-
-```
-wget http://mirrors.kernel.org/ubuntu/pool/universe/w/wxwidgets3.0/libwxgtk3.0-0v5_3.0.4+dfsg-3_amd64.deb
 ```
 
 Then acquiring the following dependencies:
