--- a/docs/mine-hnt/validators/validator-deployment-guide.mdx
+++ b/docs/mine-hnt/validators/validator-deployment-guide.mdx
@@ -260,7 +260,7 @@ Next, clone the `validator` branch of `miner`:
 git clone -b pevm/validators https://github.com/helium/miner.git
 ```
 
-Then acquiring the following dependencies:
+Then acquire the following dependencies:
 
 ```
 sudo apt install -y libdbus-1-dev autoconf automake libtool flex libgmp-dev cmake libsodium-dev libssl-dev bison libsnappy-dev libclang-dev doxygen make cargo g++ libsctp1 libncurses5 libwxbase3.0-0v5 build-essential cmake libdbus-1-dev mosh vim parallel
